--- a/pages/251.html
+++ b/pages/251.html
@@ -671,7 +671,7 @@ margin-left: 0em;
 <p>It can be shown that if a given such dissection can be composed up in <em>some</em> way using binary composites, then any two ways to compose it up must give the same result. See</p>
 
 <ul>
-<li>Dawson and Paré, <em>General associativity and general composition for double categories</em> , <a href="http://www.numdam.org/numdam-bin/fitem?id=CTGDC_1993__34_1_57_0">link</a></li>
+<li>Dawson and Paré, <em>General associativity and general composition for double categories</em> , <a href="http://www.numdam.org/item/CTGDC_1993__34_1_57_0/">link</a></li>
 </ul>
 
 <p>Also of interest is “Characterizing tileorders” by the same authors, in which they characterize such rectangle-dissections, called <a class="existingWikiWord" href="/nlab/show/tileorders">tileorders</a>, in purely combinatorial terms.</p>
@@ -811,14 +811,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 22, 2018 at 07:37:21.
+  Last revised on December 28, 2018 at 10:13:51.
   See the <a href="https://ncatlab.org/nlab/history/double category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/double+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+category/54" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(54 revisions)</span> | <a href="/nlab/show/diff/double+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/double+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/double+category/55" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(55 revisions)</span> | <a href="/nlab/show/diff/double+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/double+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/double category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
