--- a/pages/3807.html
+++ b/pages/3807.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9267/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9267/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="higher_algebra">Higher algebra</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p><h2 id="algebraic_theories">Algebraic theories</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+
+<h2 id="algebraic_theories">Algebraic theories</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+theory">algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/2-algebraic+theory">2-algebraic theory</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory">(∞,1)-algebraic theory</a></p>
 </li>
@@ -329,7 +337,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/operad">operad</a> / <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-operad">(∞,1)-operad</a></p>
 </li>
-</ul><h2 id="algebras_and_modules">Algebras and modules</h2><ul>
+</ul>
+
+<h2 id="algebras_and_modules">Algebras and modules</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/algebra+over+a+monad">algebra over a monad</a></p>
 
@@ -363,7 +375,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/associated+bundle">associated bundle</a>, <a class="existingWikiWord" href="/nlab/show/associated+%E2%88%9E-bundle">associated ∞-bundle</a></p>
 </li>
-</ul><h2 id="higher_algebras">Higher algebras</h2><ul>
+</ul>
+
+<h2 id="higher_algebras">Higher algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category">monoidal (∞,1)-category</a></p>
 
@@ -433,7 +449,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/deformation+theory">deformation theory</a></li>
 </ul>
 </li>
-</ul><h2 id="model_category_presentations">Model category presentations</h2><ul>
+</ul>
+
+<h2 id="model_category_presentations">Model category presentations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+simplicial+T-algebras">model structure on simplicial T-algebras</a> / <a class="existingWikiWord" href="/nlab/show/homotopy+T-algebra">homotopy T-algebra</a></p>
 </li>
@@ -443,7 +463,11 @@ margin-left: 0em;
 
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+algebras+over+an+operad">model structure on algebras over an operad</a></p>
 </li>
-</ul><h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2><ul>
+</ul>
+
+<h2 id="geometry_on_formal_duals_of_algebras">Geometry on formal duals of algebras</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -451,7 +475,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Deligne+conjecture">Deligne conjecture</a></p>
 </li>
@@ -463,9 +491,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/monoidal+Dold-Kan+correspondence">monoidal Dold-Kan correspondence</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p><a href="/nlab/edit/higher+algebra+-+contents">Edit this sidebar</a></p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -531,15 +560,19 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p>R. P. Brent, J. van de Lune, H. J. J. te Riele and D. T. Winter, <em>On the Zeros of the Riemann Zeta Function in the Critical Strip. II</em>, Mathematics of Computation Mathematics of Computation Vol. 39, No. 160 (Oct., 1982), pp. 681-688 (<a href="https://www.jstor.org/stable/2007345">doi:10.2307/2007345</a>)</p>
+<p>R. P. Brent, J. van de Lune, H. J. J. te Riele and D. T. Winter, <em>On the Zeros of the Riemann Zeta Function in the Critical Strip. II</em>, Mathematics of Computation Vol. 39, No. 160 (Oct., 1982), pp. 681-688 (<a href="https://www.jstor.org/stable/2007345">doi:10.2307/2007345</a>)</p>
 </li>
 
 <li>
-<p>Xavier Gourdon, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>13</mn></msup></mrow><annotation encoding="application/x-tex">10^{13}</annotation></semantics></math> first zeros of the Riemann Zeta function, and zeros computation at very large height</em>, 2004 (<a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeros1e13-1e24.pdf">pdf</a>)</p>
+<p>A. M. Odlyzko, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>22</mn></msup></mrow><annotation encoding="application/x-tex">10^{22}</annotation></semantics></math>-nd zero of the Riemann zeta function</em>, in Lapidus et al. (eds.) proceedings of AMS special session on <em>Dynamical, Spectral, and Arithmetic Zeta Functions</em>, 1999 (<a href="http://www.dtc.umn.edu/~odlyzko/doc/zeta.10to22.pdf">pdf</a>)</p>
 </li>
 
 <li>
-<p>David J. Platt, <em>Isolating some non-trivial zeros of zeta</em>, Math. Comp. 86 (2017), 2449-2467 (<a href="https://doi.org/10.1090/mcom/3198">doi:10.1090/mcom/3198</a>)</p>
+<p>{Gourdon04} Xavier Gourdon, <em>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mn>10</mn> <mn>13</mn></msup></mrow><annotation encoding="application/x-tex">10^{13}</annotation></semantics></math> first zeros of the Riemann Zeta function, and zeros computation at very large height</em>, 2004 (<a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeros1e13-1e24.pdf">pdf</a>, <a href="http://numbers.computation.free.fr/Constants/Miscellaneous/zetazeroscompute.html">webpage</a>)</p>
+</li>
+
+<li>
+<p>David J. Platt, <em>Isolating some non-trivial zeros of zeta</em>, Mathematics of Computation 86 (2017), 2449-2467 (<a href="https://doi.org/10.1090/mcom/3198">doi:10.1090/mcom/3198</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -548,14 +581,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 06:18:00.
+  Last revised on December 29, 2018 at 09:59:10.
   See the <a href="https://ncatlab.org/nlab/history/Riemann hypothesis" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemann+hypothesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemann+hypothesis/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Riemann+hypothesis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemann+hypothesis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemann+hypothesis" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemann+hypothesis/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Riemann+hypothesis" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemann+hypothesis" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemann hypothesis/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
