--- a/pages/10022.html
+++ b/pages/10022.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5054/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5054/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1009,12 +1009,20 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<ul>
+<li><a href='#ryutakayanagi_formula'>Ryu-Takayanagi formula</a></li>
+<li><a href='#emergence_of_bulk_spacetime_from_boundary_information_theory'>Emergence of bulk spacetime from boundary information theory</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#References'>References</a></li>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
+
+<p>Holographic entanglement entropy refers to the expression of <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a> expressed “holographically” via a version of <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> in terms of the <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a> of a higher-dimensional <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
+
+<h3 id="ryutakayanagi_formula">Ryu-Takayanagi formula</h3>
 
 <p>For <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a> that are exhibited as <a class="existingWikiWord" href="/nlab/show/boundary+field+theories">boundary field theories</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> of an approximately <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> via some approximation to <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (for instance for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> via <a class="existingWikiWord" href="/nlab/show/AdS-QCD+duality">AdS-QCD duality</a>) their <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/bounded+set">bounded domain</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo>⊂</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">B\subset A</annotation></semantics></math> turns out to be proportional to the <a class="existingWikiWord" href="/nlab/show/area">area</a> of the minimal-area <a class="existingWikiWord" href="/nlab/show/surface">surface</a> inside the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> spacetime that has the same <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∂</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\partial B</annotation></semantics></math> (see <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09 (3.3)</a> for review of the formula and <a href="#LewkowyczMaldacena13">Lewkowycz-Maldacena 13</a> for a conceptual explanation).</p>
 <center>
@@ -1039,6 +1047,22 @@ margin-left: 0em;
 <img src="https://ncatlab.org/nlab/files/RyuTakayanagiSubadditivity.jpg" width="500" /></center>
 <blockquote>
 <p>graphics grabbed from <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09</a></p>
+</blockquote>
+
+<h3 id="emergence_of_bulk_spacetime_from_boundary_information_theory">Emergence of bulk spacetime from boundary information theory</h3>
+
+<p>Further discussion of implications of the Ryu-Takayanagi formula in van Raamsdonk 10uggested that the logic may also be turned around: Instead of computing <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a> from known <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>, conversely the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> may be reconstructed from knowledge of the <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a boundary field theory.</p>
+
+<p>Talking this perspective to the extreme suggests a description of <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> entirely in terms of <a class="existingWikiWord" href="/nlab/show/information+theory">information theory</a>/<a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a>-relations of a boundary <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a> (“tensor networks”)</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/BlackHoleTensorNetwork.jpg" width="500" /></center>
+<blockquote>
+<p>graphics grabbed from <a href="#Harlow18">Harlow 18</a></p>
+</blockquote>
+<center>
+<img src="https://ncatlab.org/nlab/files/AdSRindlerTensorNetwork.jpg" width="500" /></center>
+<blockquote>
+<p>graphics grabbed from <a href="#Harlow18">Harlow 18</a></p>
 </blockquote>
 
 <h2 id="related_concepts">Related concepts</h2>
@@ -1120,7 +1144,7 @@ margin-left: 0em;
 <p>An influential argument that this relation implies that <a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a> in the boundary theory is what makes spacetime as such appear in the bulk theory is due to</p>
 
 <ul>
-<li>
+<li id="vanRaamsdonk10">
 <p><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Building up spacetime with quantum entanglement</em>, Gen.Rel.Grav.42:2323-2329,2010; Int.J.Mod.Phys.D19:2429-2435,2010 (<a href="https://arxiv.org/abs/1005.3035">arXiv:1005.3035</a>)</p>
 </li>
 
@@ -1154,7 +1178,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 09:57:11.
+  Last revised on December 30, 2018 at 10:10:40.
   See the <a href="https://ncatlab.org/nlab/history/holographic entanglement entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
