--- a/pages/19960.html
+++ b/pages/19960.html
@@ -1169,7 +1169,7 @@ margin-left: 0em;
 <p>The extreme form of bottom-up holographic model building is explored in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Koji+Hashimoto">Koji Hashimoto</a>, Sotaro Sugishita, Akinori Tanaka, Akio Tomiya, <em>Deep Learning and Holographic QCD</em>, Phys. Rev. D 98, 106014 (2018) (<a href="https://arxiv.org/abs/1809.10536">arXiv:1809.10536</a>)</li>
+<li id="HashimotoEtAl18"><a class="existingWikiWord" href="/nlab/show/Koji+Hashimoto">Koji Hashimoto</a>, Sotaro Sugishita, Akinori Tanaka, Akio Tomiya, <em>Deep Learning and Holographic QCD</em>, Phys. Rev. D 98, 106014 (2018) (<a href="https://arxiv.org/abs/1809.10536">arXiv:1809.10536</a>)</li>
 </ul>
 
 <p>where an appropriate <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> geometry is computer-generated from specified boundary behaviour.</p>
@@ -1393,14 +1393,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 30, 2018 at 09:39:25.
+  Last revised on December 30, 2018 at 10:40:06.
   See the <a href="https://ncatlab.org/nlab/history/AdS-QCD correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-QCD correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
