--- a/pages/19844.html
+++ b/pages/19844.html
@@ -1188,7 +1188,7 @@ margin-left: 0em;
 <p>Emphasis of <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a>:</p>
 
 <ul>
-<li id="Nierste18">Ulrich Nierste, <em>Flavour Anomalies: Phenomenology and BSM Interpretations</em>, 2018 (<a href="https://indico.desy.de/indico/event/18498/session/5/contribution/52/material/slides/0.pdf">pdf</a>)</li>
+<li id="Nierste18">Ulrich Nierste, <em>Flavour Anomalies: Phenomenology and BSM Interpretations</em>, talk at <a href="https://indico.desy.de/indico/event/18498/">Planck 2018</a>, Bonn 2018 (<a href="https://indico.desy.de/indico/event/18498/session/5/contribution/52/material/slides/0.pdf">pdf</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1260,14 +1260,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  2, 2019 at 08:43:32.
+  Last revised on January  2, 2019 at 10:05:29.
   See the <a href="https://ncatlab.org/nlab/history/flavour anomaly" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/flavour+anomaly" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/flavour+anomaly/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/flavour+anomaly" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/flavour+anomaly" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/flavour anomaly/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
